compiler (19)/compiler (15)/compiler (8) (5) (3) (2)/compiler (8) (5) (3)/compiler (8) (5)/compiler (8)/gen/antlr/AngulerParser.java
// Generated from C:/Users/Rahaf/Downloads/Telegram Desktop/compiler (8)/compiler/src/antlr/AngulerParser.g4 by ANTLR 4.13.2
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class AngulerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		OPEN_BRACE=1, CLOSE_BRACE=2, OPEN_PAREN=3, CLOSE_PAREN=4, OPEN_BRACKET=5, 
		CLOSE_BRACKET=6, COMMA=7, SEMICOLON=8, DOT=9, COLON=10, QUOTE=11, EQUAL=12, 
		IS_EQUAL=13, NOT_EQUAL=14, IS_EQUAL_TYPE=15, NOT_EQUAL_TYPE=16, BACK_SLASH=17, 
		ARROW=18, COMPONENT=19, ANGULAR=20, INCREMENT=21, DECREMENT=22, VOID=23, 
		NOT=24, QUESTION=25, OPENTAG=26, CLOSETAG=27, LESS_EQUAL=28, GRETER_EQUAL=29, 
		OPERATORE=30, SLASH=31, SUM=32, MIN=33, MUL=34, MOD=35, DOLLAR=36, AND=37, 
		OR=38, PIPE=39, SELECTOR=40, STANDALONE=41, IMPORTS=42, TEMPLATE=43, TEMPLATE_URL=44, 
		STYLES=45, STYLE_URLS=46, STYLE_URL=47, NG_IF=48, NG_FOR=49, NG_CLASS=50, 
		NG_STYLE=51, NG_MODEL=52, DIRECTIVE=53, HASH=54, NG_CONTENT=55, NG_TEMPLATE=56, 
		INPUT=57, OUTPUT=58, VIEW_CHILD=59, CONTENT_CHILD=60, NG_ON_INIT=61, NG_ON_CHANGES=62, 
		NG_ON_DESTROY=63, ROUTER_LINK=64, ROUTER_OUTLET=65, FORM_CONTROL_NAME=66, 
		FORM_GROUP=67, FORM_ARRAY=68, STYLE_ATTR=69, ALT_ATTR=70, SRC_ATTR=71, 
		HREF_ATTR=72, DIV_TAG=73, H1_TAG=74, H2_TAG=75, H3_TAG=76, P_TAG=77, IMG_TAG=78, 
		A_TAG=79, SPAN_TAG=80, BUTTON_TAG=81, FUNCTION=82, INTERFACE=83, CLASS=84, 
		IMPORT=85, FROM=86, EXPORT=87, IF=88, ELSE=89, FOR=90, WHILE=91, DO=92, 
		SWITCH=93, CASE=94, DEFAULT=95, RETURN=96, BREAK=97, CONTINUE=98, BOOLEAN=99, 
		NULL=100, UNDEFINED=101, STRING=102, NUMBER=103, BOOL=104, ANY=105, CONST=106, 
		LET=107, VAR=108, INT=109, PRIVATE=110, PUBLIC=111, PROTECTED=112, IDENTIFIER=113, 
		STRING_LITERAL=114, TEMPLATE_LITERAL=115, DECIMAL_INTEGER_LITERAL=116, 
		HEX_INTEGER_LITERAL=117, OCTAL_INTEGER_LITERAL=118, BINARY_INTEGER_LITERAL=119, 
		FLOAT_LITERAL=120, LINE_COMMENT=121, BLOCK_COMMENT=122, WS=123;
	public static final int
		RULE_prog = 0, RULE_anguler_import = 1, RULE_component_declaration = 2, 
		RULE_component_metadata = 3, RULE_metadata_property = 4, RULE_type_annotation = 5, 
		RULE_base_type_annotation = 6, RULE_primitive_type = 7, RULE_array_type = 8, 
		RULE_structured_type = 9, RULE_type_pair = 10, RULE_property_declaration = 11, 
		RULE_class_declaration = 12, RULE_class_body = 13, RULE_method_declaration = 14, 
		RULE_method_body = 15, RULE_function_declaration = 16, RULE_function_body = 17, 
		RULE_parameter_list = 18, RULE_parameter = 19, RULE_declaraiton_keywords = 20, 
		RULE_variable_declaration = 21, RULE_primary = 22, RULE_postfix_expression = 23, 
		RULE_value = 24, RULE_assignment = 25, RULE_literal_value = 26, RULE_arithmetic_expression = 27, 
		RULE_unary_expression = 28, RULE_relational_expression = 29, RULE_equality_expression = 30, 
		RULE_logical_expression = 31, RULE_conditional_expression = 32, RULE_expression = 33, 
		RULE_json_object = 34, RULE_json_pair = 35, RULE_imports_array = 36, RULE_array = 37, 
		RULE_instruction = 38, RULE_conditional_statements = 39, RULE_block = 40, 
		RULE_if_statement = 41, RULE_for_statement = 42, RULE_switch_statement = 43, 
		RULE_switch_body = 44, RULE_switch_case = 45, RULE_switch_default = 46, 
		RULE_while_statement = 47, RULE_do_while_statement = 48, RULE_continue_Statement = 49, 
		RULE_return_Statement = 50, RULE_break_statement = 51, RULE_expressionSequence = 52, 
		RULE_interface_Declaration = 53, RULE_generic_Type = 54, RULE_eos = 55, 
		RULE_html_value = 56, RULE_tags = 57, RULE_open_tag = 58, RULE_attrs = 59, 
		RULE_html_attribute = 60, RULE_close_tag = 61, RULE_single_tag = 62, RULE_template_variable = 63, 
		RULE_ng_content = 64, RULE_ng_template = 65;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "anguler_import", "component_declaration", "component_metadata", 
			"metadata_property", "type_annotation", "base_type_annotation", "primitive_type", 
			"array_type", "structured_type", "type_pair", "property_declaration", 
			"class_declaration", "class_body", "method_declaration", "method_body", 
			"function_declaration", "function_body", "parameter_list", "parameter", 
			"declaraiton_keywords", "variable_declaration", "primary", "postfix_expression", 
			"value", "assignment", "literal_value", "arithmetic_expression", "unary_expression", 
			"relational_expression", "equality_expression", "logical_expression", 
			"conditional_expression", "expression", "json_object", "json_pair", "imports_array", 
			"array", "instruction", "conditional_statements", "block", "if_statement", 
			"for_statement", "switch_statement", "switch_body", "switch_case", "switch_default", 
			"while_statement", "do_while_statement", "continue_Statement", "return_Statement", 
			"break_statement", "expressionSequence", "interface_Declaration", "generic_Type", 
			"eos", "html_value", "tags", "open_tag", "attrs", "html_attribute", "close_tag", 
			"single_tag", "template_variable", "ng_content", "ng_template"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{'", "'}'", "'('", "')'", "'['", "']'", "','", "';'", "'.'", 
			"':'", "'''", "'='", "'=='", "'!='", "'==='", "'!=='", "'\\'", "'=>'", 
			"'@Component'", "'@angular'", "'++'", "'--'", "'void'", "'!'", "'?'", 
			"'<'", "'>'", "'<='", "'>='", null, "'/'", "'+'", "'_'", "'*'", "'%'", 
			"'$'", "'&&'", "'||'", "'|'", "'selector'", "'standalone'", "'imports'", 
			"'template'", "'templateUrl'", "'styles'", "'styleUrls'", "'styleUrl'", 
			"'*ngIf'", "'*ngFor'", "'[ngClass]'", "'[ngStyle]'", "'[(ngModel)]'", 
			null, "'#'", "'ng-content'", "'ng-template'", "'@Input'", "'@Output'", 
			"'@ViewChild'", "'@ContentChild'", "'ngOnInit'", "'ngOnChanges'", "'ngOnDestroy'", 
			"'routerLink'", "'router-outlet'", "'formControlName'", "'formGroup'", 
			"'formArray'", "'style'", "'alt'", "'src'", "'href'", "'div'", "'h1'", 
			"'h2'", "'h3'", "'p'", "'img'", "'a'", "'span'", "'button'", "'function'", 
			"'interface'", "'class'", "'import'", "'from'", "'export'", "'if'", "'else'", 
			"'for'", "'while'", "'do'", "'switch'", "'case'", "'default'", "'return'", 
			"'break'", "'continue'", null, "'null'", "'undefined'", "'string'", "'number'", 
			"'boolean'", "'any'", "'const'", "'let'", "'var'", "'int'", "'private'", 
			"'public'", "'protected'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "OPEN_BRACE", "CLOSE_BRACE", "OPEN_PAREN", "CLOSE_PAREN", "OPEN_BRACKET", 
			"CLOSE_BRACKET", "COMMA", "SEMICOLON", "DOT", "COLON", "QUOTE", "EQUAL", 
			"IS_EQUAL", "NOT_EQUAL", "IS_EQUAL_TYPE", "NOT_EQUAL_TYPE", "BACK_SLASH", 
			"ARROW", "COMPONENT", "ANGULAR", "INCREMENT", "DECREMENT", "VOID", "NOT", 
			"QUESTION", "OPENTAG", "CLOSETAG", "LESS_EQUAL", "GRETER_EQUAL", "OPERATORE", 
			"SLASH", "SUM", "MIN", "MUL", "MOD", "DOLLAR", "AND", "OR", "PIPE", "SELECTOR", 
			"STANDALONE", "IMPORTS", "TEMPLATE", "TEMPLATE_URL", "STYLES", "STYLE_URLS", 
			"STYLE_URL", "NG_IF", "NG_FOR", "NG_CLASS", "NG_STYLE", "NG_MODEL", "DIRECTIVE", 
			"HASH", "NG_CONTENT", "NG_TEMPLATE", "INPUT", "OUTPUT", "VIEW_CHILD", 
			"CONTENT_CHILD", "NG_ON_INIT", "NG_ON_CHANGES", "NG_ON_DESTROY", "ROUTER_LINK", 
			"ROUTER_OUTLET", "FORM_CONTROL_NAME", "FORM_GROUP", "FORM_ARRAY", "STYLE_ATTR", 
			"ALT_ATTR", "SRC_ATTR", "HREF_ATTR", "DIV_TAG", "H1_TAG", "H2_TAG", "H3_TAG", 
			"P_TAG", "IMG_TAG", "A_TAG", "SPAN_TAG", "BUTTON_TAG", "FUNCTION", "INTERFACE", 
			"CLASS", "IMPORT", "FROM", "EXPORT", "IF", "ELSE", "FOR", "WHILE", "DO", 
			"SWITCH", "CASE", "DEFAULT", "RETURN", "BREAK", "CONTINUE", "BOOLEAN", 
			"NULL", "UNDEFINED", "STRING", "NUMBER", "BOOL", "ANY", "CONST", "LET", 
			"VAR", "INT", "PRIVATE", "PUBLIC", "PROTECTED", "IDENTIFIER", "STRING_LITERAL", 
			"TEMPLATE_LITERAL", "DECIMAL_INTEGER_LITERAL", "HEX_INTEGER_LITERAL", 
			"OCTAL_INTEGER_LITERAL", "BINARY_INTEGER_LITERAL", "FLOAT_LITERAL", "LINE_COMMENT", 
			"BLOCK_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AngulerParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AngulerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public List<Anguler_importContext> anguler_import() {
			return getRuleContexts(Anguler_importContext.class);
		}
		public Anguler_importContext anguler_import(int i) {
			return getRuleContext(Anguler_importContext.class,i);
		}
		public List<Component_declarationContext> component_declaration() {
			return getRuleContexts(Component_declarationContext.class);
		}
		public Component_declarationContext component_declaration(int i) {
			return getRuleContext(Component_declarationContext.class,i);
		}
		public TerminalNode EOF() { return getToken(AngulerParser.EOF, 0); }
		public List<TerminalNode> EXPORT() { return getTokens(AngulerParser.EXPORT); }
		public TerminalNode EXPORT(int i) {
			return getToken(AngulerParser.EXPORT, i);
		}
		public List<TerminalNode> INTERFACE() { return getTokens(AngulerParser.INTERFACE); }
		public TerminalNode INTERFACE(int i) {
			return getToken(AngulerParser.INTERFACE, i);
		}
		public List<Class_declarationContext> class_declaration() {
			return getRuleContexts(Class_declarationContext.class);
		}
		public Class_declarationContext class_declaration(int i) {
			return getRuleContext(Class_declarationContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngulerParserVisitor ) return ((AngulerParserVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			setState(153);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==IMPORT) {
					{
					{
					setState(132);
					anguler_import();
					}
					}
					setState(137);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMPONENT) {
					{
					{
					setState(138);
					component_declaration();
					}
					}
					setState(143);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==EXPORT) {
					{
					{
					setState(144);
					match(EXPORT);
					setState(145);
					match(INTERFACE);
					setState(146);
					class_declaration();
					}
					}
					setState(151);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(152);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Anguler_importContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(AngulerParser.IMPORT, 0); }
		public TerminalNode OPEN_BRACE() { return getToken(AngulerParser.OPEN_BRACE, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(AngulerParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(AngulerParser.IDENTIFIER, i);
		}
		public TerminalNode CLOSE_BRACE() { return getToken(AngulerParser.CLOSE_BRACE, 0); }
		public TerminalNode FROM() { return getToken(AngulerParser.FROM, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(AngulerParser.STRING_LITERAL, 0); }
		public TerminalNode SEMICOLON() { return getToken(AngulerParser.SEMICOLON, 0); }
		public List<TerminalNode> COMMA() { return getTokens(AngulerParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AngulerParser.COMMA, i);
		}
		public Anguler_importContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_anguler_import; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).enterAnguler_import(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).exitAnguler_import(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngulerParserVisitor ) return ((AngulerParserVisitor<? extends T>)visitor).visitAnguler_import(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Anguler_importContext anguler_import() throws RecognitionException {
		Anguler_importContext _localctx = new Anguler_importContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_anguler_import);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			match(IMPORT);
			setState(156);
			match(OPEN_BRACE);
			setState(157);
			match(IDENTIFIER);
			setState(162);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(158);
				match(COMMA);
				setState(159);
				match(IDENTIFIER);
				}
				}
				setState(164);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(165);
			match(CLOSE_BRACE);
			setState(166);
			match(FROM);
			setState(167);
			match(STRING_LITERAL);
			setState(168);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Component_declarationContext extends ParserRuleContext {
		public TerminalNode COMPONENT() { return getToken(AngulerParser.COMPONENT, 0); }
		public TerminalNode OPEN_PAREN() { return getToken(AngulerParser.OPEN_PAREN, 0); }
		public Component_metadataContext component_metadata() {
			return getRuleContext(Component_metadataContext.class,0);
		}
		public TerminalNode CLOSE_PAREN() { return getToken(AngulerParser.CLOSE_PAREN, 0); }
		public Class_declarationContext class_declaration() {
			return getRuleContext(Class_declarationContext.class,0);
		}
		public Component_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_component_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).enterComponent_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).exitComponent_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngulerParserVisitor ) return ((AngulerParserVisitor<? extends T>)visitor).visitComponent_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Component_declarationContext component_declaration() throws RecognitionException {
		Component_declarationContext _localctx = new Component_declarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_component_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			match(COMPONENT);
			setState(171);
			match(OPEN_PAREN);
			setState(172);
			component_metadata();
			setState(173);
			match(CLOSE_PAREN);
			setState(174);
			class_declaration();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Component_metadataContext extends ParserRuleContext {
		public TerminalNode OPEN_BRACE() { return getToken(AngulerParser.OPEN_BRACE, 0); }
		public TerminalNode CLOSE_BRACE() { return getToken(AngulerParser.CLOSE_BRACE, 0); }
		public List<Metadata_propertyContext> metadata_property() {
			return getRuleContexts(Metadata_propertyContext.class);
		}
		public Metadata_propertyContext metadata_property(int i) {
			return getRuleContext(Metadata_propertyContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(AngulerParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AngulerParser.COMMA, i);
		}
		public Component_metadataContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_component_metadata; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).enterComponent_metadata(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).exitComponent_metadata(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngulerParserVisitor ) return ((AngulerParserVisitor<? extends T>)visitor).visitComponent_metadata(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Component_metadataContext component_metadata() throws RecognitionException {
		Component_metadataContext _localctx = new Component_metadataContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_component_metadata);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			match(OPEN_BRACE);
			{
			setState(177);
			metadata_property();
			setState(182);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(178);
				match(COMMA);
				setState(179);
				metadata_property();
				}
				}
				setState(184);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			setState(185);
			match(CLOSE_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
